# demo-pyigtlcompose

./: .gitignore  CONTAINER_ARCHITECTURE.md  Changes.md  README (1).md  README.md  RECORDER_FIXES.md  TMSCOM.env  docker-compose.yml  docker_compose_recorder.py  dockeringkey.pem  fix.bat  publish_test_pose.py  requirements.txt  run.sh  setup.sh  test_arm_movement.py  test_csv_write.py  test_network_debug.sh  test_port_connectivity.py  test_recorder.sh  test_write.py  test_y_offset.py  validate_arm_movement.py
SlicerTMS/: .gitignore  README_CHUNKED_TRANSMISSION.md
SlicerTMS/server/: chunked_transmission.py  server.py  server_chunky.py
coiltransform/coiltransform/: CMakeLists.txt
coiltransform/coiltransform/adjustpos/: CMakeLists.txt  adjustpos.py
coiltransform/coiltransform/adjustpos/Resources/UI/: adjustpos.ui
dockerfiles/ROS2armsim/: BUILDKIT_GUIDE.md  Dockerfile.buildkit  Dockerfile.buildkit.fixed  PERMISSION_FIX_GUIDE.md  build.ps1  docker-compose-fixed.yml  dockerfile  dockerfile_robust  purpose.md
dockerfiles/ROSadapter/: dockerfile  purpose.md
dockerfiles/ROSadapter_Phosphobot/: Dockerfile
dockerfiles/amalgui/: dockerfile  dockerfile_ext
dockerfiles/borrowedgui/: dockerfile  installs.py  onstart.py  startup.sh
dockerfiles/optimized/: README-full.md  README.md  convertmesh.py  convertmesh_ur.py  dockerfile.buildkit  dockerfile.buildkit-full  dockerfile.buildkit-full-fixed  dockerfile.buildkit-full-fixed.txt  init-tms-env  (+5 more)
evaluations/: check_csv.py  check_live_stats.py  debug_csv.py  init-permissions.sh  results.csv  test_update_once.py  update.py
(+46 files in other folders)
